# HaskellCookbook

./: README.md  recipe.lhs  removedivs.py
Ch_1-Foundations_of_Haskell/: exec-1.dot  exec-2.dot  exec-3.dot  exec-4.dot  exec-5.dot  getting-started-with-haskell.org  index.org  introduction.org  understanding-functional-programming.org  working-with-list-functions.org  working-with-pure-functions-and-user-defined-data-types.org
Ch_1-Foundations_of_Haskell/2-Working with data types/: Boolean.hs  User.hs  index.html  index.org  user-defined.org
Ch_1-Foundations_of_Haskell/3-Working with Pure Functions/: Working with pure functions.docx  index.html  index.org
Ch_1-Foundations_of_Haskell/4-Writing Recursive Functions/: Fibonacci.hs  Writing Recursive Functions.docx  index.html  index.org
Ch_1-Foundations_of_Haskell/5-Working with List Functions/: index.org
Ch_1-Foundations_of_Haskell/6-Writing Functions with Effects/: index.org
Ch_1-Foundations_of_Haskell/file-print/: README.md  file-print.cabal
Ch_1-Foundations_of_Haskell/hello/: hello.cabal
Ch_1-Foundations_of_Haskell/list-functions/: README.md  list-functions.cabal
Ch_1-Foundations_of_Haskell/list-functions/app/: Main.hs
Ch_1-Foundations_of_Haskell/list-functions/src/: Lib.hs
Ch_1-Foundations_of_Haskell/quadratic/: README.md  quadratic.cabal
Ch_10-Working_with_Advanced_Haskell/: README.md
Ch_10-Working_with_Advanced_Haskell/working-with-GADTs/: README.md  working-with-GADTs.cabal
Ch_10-Working_with_Advanced_Haskell/working-with-existentials/: README.md  working-with-existentials.cabal
Ch_10-Working_with_Advanced_Haskell/working-with-rank-n-type/: README.md  working-with-rank-n-type.cabal
Ch_10-Working_with_Advanced_Haskell/working-with-type-family/: README.md  working-with-type-family.cabal
Ch_11-Working_with_Lens_and_Prisms/: README.md
Ch_11-Working_with_Lens_and_Prisms/creating-lenses/: README.md  creating-lenses.cabal
Ch_11-Working_with_Lens_and_Prisms/working-with-aeson-lens/: README.md  working-with-aeson-lens.cabal
Ch_11-Working_with_Lens_and_Prisms/working-with-iso/: README.md  stack.yaml  working-with-iso.cabal
Ch_11-Working_with_Lens_and_Prisms/working-with-iso/src/: Main.lhs
Ch_11-Working_with_Lens_and_Prisms/working-with-lenses/: README.md  working-with-lenses.cabal
Ch_11-Working_with_Lens_and_Prisms/working-with-prism/: README.md  working-with-prism.cabal
Ch_11-Working_with_Lens_and_Prisms/working-with-traversal/: README.md  working-with-traversal.cabal
Ch_11-Working_with_Lens_and_Prisms/working-with-traversal/src/: Main.lhs
Ch_12-Concurrent_and_parallel_programming/master-slave/: README.md  master-slave.cabal  stack.yaml
Ch_12-Concurrent_and_parallel_programming/using-accelerate/: README.md  using-accelerate.cabal
Ch_12-Concurrent_and_parallel_programming/using-closure/: README.md  using-closure.cabal
Ch_12-Concurrent_and_parallel_programming/working-with-STM/: README.md  working-with-STM.cabal
Ch_12-Concurrent_and_parallel_programming/working-with-cloud-haskell/: README.md  stack.yaml  working-with-cloud-haskell.cabal
Ch_12-Concurrent_and_parallel_programming/working-with-cloud-haskell/src/: Main.lhs
Ch_12-Concurrent_and_parallel_programming/working-with-eval/: README.md  working-with-eval.cabal  working-with-eval.eventlog
Ch_12-Concurrent_and_parallel_programming/working-with-ioref/: README.md  working-with-ioref.cabal
Ch_12-Concurrent_and_parallel_programming/working-with-ioref/src/: Main.lhs
Ch_12-Concurrent_and_parallel_programming/working-with-monad-par/: README.md  working-with-monad-par.cabal  working-with-monad-par.eventlog
Ch_12-Concurrent_and_parallel_programming/working-with-monad-par/src/: Main.lhs
Ch_12-Concurrent_and_parallel_programming/working-with-mvar/: README.md  working-with-mvar.cabal
Ch_12-Concurrent_and_parallel_programming/working-with-mvar/src/: Main.lhs
Ch_2-Getting_Functional/: Introduction.org  fibonacci.dot  lazy-fibonacci-1.xml  merge-sort.dot
Ch_2-Getting_Functional/eratosthenes/: README.md  eratosthenes.cabal
Ch_2-Getting_Functional/fibonacci/: fibonacci.cabal
Ch_2-Getting_Functional/fibonacci-infinite/: README.md  fibonacci-infinite.cabal
Ch_2-Getting_Functional/folds/: README.md  folds.cabal
Ch_2-Getting_Functional/map-filter/: LICENSE  README.md  map-filter.cabal
Ch_3-Defining_Data/using-functions-in-data/: README.md  using-functions-in-data.cabal
Ch_4-Working_With_Functors_Applicatives_And_Monads/ini-parser/: README.md  ini-parser.cabal  sample.ini
Ch_4-Working_With_Functors_Applicatives_And_Monads/ini-parser/src/: Main.hs
Ch_4-Working_With_Functors_Applicatives_And_Monads/working-with-functors/: README.md  working-with-functors.cabal
Ch_4-Working_With_Functors_Applicatives_And_Monads/working-with-functors/src/: Main.hs
Ch_5-More_about_monads/state-monad/: README.md  state-monad.cabal
Ch_5-More_about_monads/state-monad-trans/: README.md  state-monad-trans.cabal
Ch_5-More_about_monads/state-monad-trans/src/: Main.hs
Ch_5-More_about_monads/state-monad/src/: Main.lhs
Ch_6-Working_with_common_containers_and_strings/: README.org
Ch_7-Working_with_Relational_and_NoSQL_databases/: README.md
Ch_7-Working_with_Relational_and_NoSQL_databases/custom-datatype/: README.md  custom-datatype.cabal
Ch_7-Working_with_Relational_and_NoSQL_databases/custom-datatype/src/: Custom.hs  Main.lhs
Ch_7-Working_with_Relational_and_NoSQL_databases/manage-migrations/: README.md  manage-migrations.cabal
Ch_7-Working_with_Relational_and_NoSQL_databases/manage-migrations/src/: Main.lhs
Ch_8-Working_with_HTML_and_Templates/: README.md
Ch_8-Working_with_HTML_and_Templates/working-with-heist/: README.md  stack.yaml  working-with-heist.cabal
Ch_8-Working_with_HTML_and_Templates/working-with-heist/src/: Main.lhs
Ch_8-Working_with_HTML_and_Templates/working-with-heist/templates/: HelloWorld.tpl
Ch_9-Working_with_Snap/: README.md
Ch_9-Working_with_Snap/form-handling-in-snap/: README.md  form-handling-in-snap.cabal
Ch_9-Working_with_Snap/form-handling-in-snap/src/: Main.lhs
(+175 files in other folders)
