name:                list-functions
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yogeshsajanikar/list-functions#readme
license:             BSD3
license-file:        LICENSE
author:              Yogesh Sajanikar
maintainer:          yogesh_sajanikar@yahoo.com
copyright:           (c) Copyright 2016 All Rights Reserved
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable list-functions-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , list-functions
  default-language:    Haskell2010

test-suite list-functions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , list-functions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yogeshsajanikar/list-functions
