name:                working-with-traversal
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yogeshsajanikar/working-with-traversal#readme
license:             BSD3
license-file:        LICENSE
author:              Yogesh Sajanikar
maintainer:          yogesh_sajanikar@yahoo.com
copyright:           (c) Copyright 2016 All Rights Reserved
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable working-with-traversal
  hs-source-dirs:      src
  main-is:             Main.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
