name:                working-with-ioref
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/working-with-ioref#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable working-with-ioref
  hs-source-dirs:      src
  main-is:             Main.lhs
  ghc-options: -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
