name:                custom-datatype
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yogeshsajanikar/custom-datatype#readme
license:             BSD3
license-file:        LICENSE
author:              Yogesh Sajanikar
maintainer:          yogesh_sajanikar@yahoo.com
copyright:           (c) Copyright 2016 All Rights Reserved
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable custom-datatype
  hs-source-dirs:      src
  other-modules:       Custom
  main-is:             Main.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , text
                     , mtl
                     , email-validate
